[package]
name = "comemo"
version = "0.3.1"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2021"
description = "Incremental computation through constrained memoization."
repository = "https://github.com/typst/comemo"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["caching"]
keywords = ["incremental", "memoization", "tracked", "constraints"]

[features]
default = []
testing = []

[dependencies]
comemo-macros = { version = "0.3.1", path = "macros" }
once_cell = "1.18"
parking_lot = "0.12"
siphasher = "1"

[dev-dependencies]
serial_test = "2.0.0"

[[test]]
name = "tests"
path = "tests/tests.rs"
required-features = ["testing"]
