[package]
name = "comemo-macros"
description = "Procedural macros for comemo."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
